# RFPL

./: .gitignore  LICENCE  MANIFEST.in  Makefile  README.md  RFPL.g4  Readme  TODO.txt  commandline.py  gram.txt  interpreter.py  main.py  pyproject.toml  rfpl.g4  rfpl.interp  rfpl.tokens  rfplLexer.interp  rfplLexer.py  rfplListener.py  rfplParser.py
journey/: __main__.py  journey_en.json  roadmap.txt
lib/: basics.py  basics.rfpy  fib.rfpl  inflist.rfpl  parsa-fib.rfpl  parsa-first.rfpl  stack.rfpl
rfpl/: __main__.py  fast_functions.py  interpreter.py  natural.py  rfpy.py  settings.py  symbol.py
rfpl/lib/: all.rfpl  basics.py  fib.rfpl  fix.rfpl  inflist.rfpl  logic.rfpl  stack.rfpl
scripts/: build.py
tests/: test_general.py
