[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rfpl"
authors = [
    {name = "AmirMohammad Bandari Masoole", email = "ambandarim@gmail.com"},
    {name = "Parsa Alizadeh", email = "parsa.alizadeh1@gmail.com"}
]
description = "Recursive Functional Programming Language"
readme = "README.md"
dependencies = [
    "prompt_toolkit",
    "antlr4-python3-runtime"
]
dynamic = ["version"]
requires-python = ">= 3.9"
# license, keywords, homepage, ...

[project.scripts]
rfpl = "rfpl.__main__:main"
journey = "journey.__main__:main"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
